--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,13 @@ textarea {
 	width: 100%;
 	box-sizing: border-box;
 }
+input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="password"]:focus,
+textarea:focus {
+    box-shadow: none;
+    outline: none;
+}
 textarea {
 	height: 160px;
 }
@@ -50,11 +57,13 @@ label {
 	box-shadow: 1px 1px 6px -2px #ccc;
 }
 
-.success {
+input.success,
+textarea.success {
 	border: 1px solid green;
 }
 
-.error {
+input.error,
+textarea.success {
 	border: 1px solid red;
 }
 
